DLP/src/y.output
   0  $accept : programa $end

   1  programa : listaDeclaraciones

   2  listaDeclaraciones :
   3                     | listaDeclaraciones declaracion

   4  declaracion : declaracionVariable
   5              | declaracionFuncion
   6              | declaracionProcedimiento
   7              | declaracionStruct

   8  declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'

   9  declaracionStruct : TYPE IDENT listaDeclaracionesCampo END TYPE ';'

  10  declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END PROC ';'

  11  declaracionVariable : DIM IDENT AS tipo ';'
  12                      | DIM IDENT listaDimensiones AS tipo ';'

  13  declaracionCampo : IDENT AS tipo ';'
  14                   | IDENT listaDimensiones AS tipo ';'

  15  listaDimensiones : '[' CTE_ENTERA ']'
  16                   | listaDimensiones '[' CTE_ENTERA ']'

  17  listaDeclaracionesVariable :
  18                             | listaDeclaracionesVariable declaracionVariable

  19  listaDeclaracionesCampo :
  20                          | listaDeclaracionesCampo declaracionCampo

  21  listaSentencias :
  22                  | listaSentencias sentencia

  23  sentencia : PRINT expresion ';'
  24            | WHILE expresion DO listaSentencias END WHILE ';'
  25            | IF expresion THEN listaSentencias ELSE listaSentencias END IF ';'
  26            | IF expresion THEN listaSentencias END IF ';'
  27            | RETURN expresion ';'
  28            | RETURN ';'
  29            | IDENT '(' parametrosLlamada ')' ';'
  30            | READ expresion ';'
  31            | expresion '=' expresion ';'

  32  parametrosLlamada :
  33                    | parametroLlamada

  34  parametroLlamada : expresion
  35                   | parametroLlamada ',' expresion

  36  parametrosFuncion :
  37                    | parametroFuncion

  38  parametroFuncion : IDENT AS tipo
  39                   | parametroFuncion ',' IDENT AS tipo

  40  expresion : CTE_ENTERA
  41            | CTE_CHAR
  42            | CTE_REAL
  43            | expresion '+' expresion
  44            | expresion '-' expresion
  45            | expresion '*' expresion
  46            | expresion '/' expresion
  47            | expresion '>' expresion
  48            | expresion '<' expresion
  49            | expresion MAYORIGUAL expresion
  50            | expresion MENORIGUAL expresion
  51            | expresion AND expresion
  52            | expresion OR expresion
  53            | expresion DISTINTO expresion
  54            | expresion IGUAL expresion
  55            | expresion listaDimensionesAcceso
  56            | expresion '.' IDENT
  57            | '(' expresion ')'
  58            | IDENT '(' parametrosLlamada ')'
  59            | CTYPE '(' tipo ',' expresion ')'
  60            | IDENT
  61            | NOT expresion
  62            | CTE_TRUE
  63            | CTE_FALSE

  64  listaDimensionesAcceso : '[' expresion ']'
  65                         | listaDimensionesAcceso '[' expresion ']'

  66  tipo : INTEGER
  67       | CHARACTER
  68       | REAL
  69       | IDENT
  70       | BOOL

state 0
	$accept : . programa $end  (0)
	listaDeclaraciones : .  (2)

	.  reduce 2

	programa  goto 1
	listaDeclaraciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : listaDeclaraciones .  (1)
	listaDeclaraciones : listaDeclaraciones . declaracion  (3)

	DIM  shift 3
	FUNCTION  shift 4
	PROC  shift 5
	TYPE  shift 6
	$end  reduce 1

	declaracion  goto 7
	declaracionVariable  goto 8
	declaracionFuncion  goto 9
	declaracionProcedimiento  goto 10
	declaracionStruct  goto 11


state 3
	declaracionVariable : DIM . IDENT AS tipo ';'  (11)
	declaracionVariable : DIM . IDENT listaDimensiones AS tipo ';'  (12)

	IDENT  shift 12
	.  error


state 4
	declaracionFuncion : FUNCTION . IDENT '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	IDENT  shift 13
	.  error


state 5
	declaracionProcedimiento : PROC . IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END PROC ';'  (10)

	IDENT  shift 14
	.  error


state 6
	declaracionStruct : TYPE . IDENT listaDeclaracionesCampo END TYPE ';'  (9)

	IDENT  shift 15
	.  error


state 7
	listaDeclaraciones : listaDeclaraciones declaracion .  (3)

	.  reduce 3


state 8
	declaracion : declaracionVariable .  (4)

	.  reduce 4


state 9
	declaracion : declaracionFuncion .  (5)

	.  reduce 5


state 10
	declaracion : declaracionProcedimiento .  (6)

	.  reduce 6


state 11
	declaracion : declaracionStruct .  (7)

	.  reduce 7


state 12
	declaracionVariable : DIM IDENT . AS tipo ';'  (11)
	declaracionVariable : DIM IDENT . listaDimensiones AS tipo ';'  (12)

	AS  shift 16
	'['  shift 17
	.  error

	listaDimensiones  goto 18


state 13
	declaracionFuncion : FUNCTION IDENT . '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	'('  shift 19
	.  error


state 14
	declaracionProcedimiento : PROC IDENT . '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END PROC ';'  (10)

	'('  shift 20
	.  error


state 15
	declaracionStruct : TYPE IDENT . listaDeclaracionesCampo END TYPE ';'  (9)
	listaDeclaracionesCampo : .  (19)

	.  reduce 19

	listaDeclaracionesCampo  goto 21


state 16
	declaracionVariable : DIM IDENT AS . tipo ';'  (11)

	BOOL  shift 22
	INTEGER  shift 23
	REAL  shift 24
	CHARACTER  shift 25
	IDENT  shift 26
	.  error

	tipo  goto 27


state 17
	listaDimensiones : '[' . CTE_ENTERA ']'  (15)

	CTE_ENTERA  shift 28
	.  error


state 18
	declaracionVariable : DIM IDENT listaDimensiones . AS tipo ';'  (12)
	listaDimensiones : listaDimensiones . '[' CTE_ENTERA ']'  (16)

	AS  shift 29
	'['  shift 30
	.  error


state 19
	declaracionFuncion : FUNCTION IDENT '(' . parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)
	parametrosFuncion : .  (36)

	IDENT  shift 31
	')'  reduce 36

	parametrosFuncion  goto 32
	parametroFuncion  goto 33


state 20
	declaracionProcedimiento : PROC IDENT '(' . parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END PROC ';'  (10)
	parametrosFuncion : .  (36)

	IDENT  shift 31
	')'  reduce 36

	parametrosFuncion  goto 34
	parametroFuncion  goto 33


state 21
	declaracionStruct : TYPE IDENT listaDeclaracionesCampo . END TYPE ';'  (9)
	listaDeclaracionesCampo : listaDeclaracionesCampo . declaracionCampo  (20)

	IDENT  shift 35
	END  shift 36
	.  error

	declaracionCampo  goto 37


state 22
	tipo : BOOL .  (70)

	.  reduce 70


state 23
	tipo : INTEGER .  (66)

	.  reduce 66


state 24
	tipo : REAL .  (68)

	.  reduce 68


state 25
	tipo : CHARACTER .  (67)

	.  reduce 67


state 26
	tipo : IDENT .  (69)

	.  reduce 69


state 27
	declaracionVariable : DIM IDENT AS tipo . ';'  (11)

	';'  shift 38
	.  error


state 28
	listaDimensiones : '[' CTE_ENTERA . ']'  (15)

	']'  shift 39
	.  error


state 29
	declaracionVariable : DIM IDENT listaDimensiones AS . tipo ';'  (12)

	BOOL  shift 22
	INTEGER  shift 23
	REAL  shift 24
	CHARACTER  shift 25
	IDENT  shift 26
	.  error

	tipo  goto 40


state 30
	listaDimensiones : listaDimensiones '[' . CTE_ENTERA ']'  (16)

	CTE_ENTERA  shift 41
	.  error


state 31
	parametroFuncion : IDENT . AS tipo  (38)

	AS  shift 42
	.  error


state 32
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion . ')' AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	')'  shift 43
	.  error


state 33
	parametrosFuncion : parametroFuncion .  (37)
	parametroFuncion : parametroFuncion . ',' IDENT AS tipo  (39)

	','  shift 44
	')'  reduce 37


state 34
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion . ')' listaDeclaracionesVariable listaSentencias END PROC ';'  (10)

	')'  shift 45
	.  error


state 35
	declaracionCampo : IDENT . AS tipo ';'  (13)
	declaracionCampo : IDENT . listaDimensiones AS tipo ';'  (14)

	AS  shift 46
	'['  shift 17
	.  error

	listaDimensiones  goto 47


state 36
	declaracionStruct : TYPE IDENT listaDeclaracionesCampo END . TYPE ';'  (9)

	TYPE  shift 48
	.  error


state 37
	listaDeclaracionesCampo : listaDeclaracionesCampo declaracionCampo .  (20)

	.  reduce 20


state 38
	declaracionVariable : DIM IDENT AS tipo ';' .  (11)

	.  reduce 11


state 39
	listaDimensiones : '[' CTE_ENTERA ']' .  (15)

	.  reduce 15


state 40
	declaracionVariable : DIM IDENT listaDimensiones AS tipo . ';'  (12)

	';'  shift 49
	.  error


state 41
	listaDimensiones : listaDimensiones '[' CTE_ENTERA . ']'  (16)

	']'  shift 50
	.  error


state 42
	parametroFuncion : IDENT AS . tipo  (38)

	BOOL  shift 22
	INTEGER  shift 23
	REAL  shift 24
	CHARACTER  shift 25
	IDENT  shift 26
	.  error

	tipo  goto 51


state 43
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' . AS tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	AS  shift 52
	.  error


state 44
	parametroFuncion : parametroFuncion ',' . IDENT AS tipo  (39)

	IDENT  shift 53
	.  error


state 45
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' . listaDeclaracionesVariable listaSentencias END PROC ';'  (10)
	listaDeclaracionesVariable : .  (17)

	.  reduce 17

	listaDeclaracionesVariable  goto 54


state 46
	declaracionCampo : IDENT AS . tipo ';'  (13)

	BOOL  shift 22
	INTEGER  shift 23
	REAL  shift 24
	CHARACTER  shift 25
	IDENT  shift 26
	.  error

	tipo  goto 55


state 47
	declaracionCampo : IDENT listaDimensiones . AS tipo ';'  (14)
	listaDimensiones : listaDimensiones . '[' CTE_ENTERA ']'  (16)

	AS  shift 56
	'['  shift 30
	.  error


state 48
	declaracionStruct : TYPE IDENT listaDeclaracionesCampo END TYPE . ';'  (9)

	';'  shift 57
	.  error


state 49
	declaracionVariable : DIM IDENT listaDimensiones AS tipo ';' .  (12)

	.  reduce 12


state 50
	listaDimensiones : listaDimensiones '[' CTE_ENTERA ']' .  (16)

	.  reduce 16


state 51
	parametroFuncion : IDENT AS tipo .  (38)

	.  reduce 38


state 52
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS . tipo listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)

	BOOL  shift 22
	INTEGER  shift 23
	REAL  shift 24
	CHARACTER  shift 25
	IDENT  shift 26
	.  error

	tipo  goto 58


state 53
	parametroFuncion : parametroFuncion ',' IDENT . AS tipo  (39)

	AS  shift 59
	.  error


state 54
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable . listaSentencias END PROC ';'  (10)
	listaDeclaracionesVariable : listaDeclaracionesVariable . declaracionVariable  (18)
	listaSentencias : .  (21)

	DIM  shift 3
	CTE_TRUE  reduce 21
	CTE_FALSE  reduce 21
	CTE_ENTERA  reduce 21
	CTE_REAL  reduce 21
	CTE_CHAR  reduce 21
	IDENT  reduce 21
	PRINT  reduce 21
	IF  reduce 21
	WHILE  reduce 21
	RETURN  reduce 21
	END  reduce 21
	READ  reduce 21
	NOT  reduce 21
	CTYPE  reduce 21
	'('  reduce 21

	declaracionVariable  goto 60
	listaSentencias  goto 61


state 55
	declaracionCampo : IDENT AS tipo . ';'  (13)

	';'  shift 62
	.  error


state 56
	declaracionCampo : IDENT listaDimensiones AS . tipo ';'  (14)

	BOOL  shift 22
	INTEGER  shift 23
	REAL  shift 24
	CHARACTER  shift 25
	IDENT  shift 26
	.  error

	tipo  goto 63


state 57
	declaracionStruct : TYPE IDENT listaDeclaracionesCampo END TYPE ';' .  (9)

	.  reduce 9


state 58
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS tipo . listaDeclaracionesVariable listaSentencias END FUNCTION ';'  (8)
	listaDeclaracionesVariable : .  (17)

	.  reduce 17

	listaDeclaracionesVariable  goto 64


state 59
	parametroFuncion : parametroFuncion ',' IDENT AS . tipo  (39)

	BOOL  shift 22
	INTEGER  shift 23
	REAL  shift 24
	CHARACTER  shift 25
	IDENT  shift 26
	.  error

	tipo  goto 65


state 60
	listaDeclaracionesVariable : listaDeclaracionesVariable declaracionVariable .  (18)

	.  reduce 18


state 61
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias . END PROC ';'  (10)
	listaSentencias : listaSentencias . sentencia  (22)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 71
	PRINT  shift 72
	IF  shift 73
	WHILE  shift 74
	RETURN  shift 75
	END  shift 76
	READ  shift 77
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	sentencia  goto 81
	expresion  goto 82


state 62
	declaracionCampo : IDENT AS tipo ';' .  (13)

	.  reduce 13


state 63
	declaracionCampo : IDENT listaDimensiones AS tipo . ';'  (14)

	';'  shift 83
	.  error


state 64
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable . listaSentencias END FUNCTION ';'  (8)
	listaDeclaracionesVariable : listaDeclaracionesVariable . declaracionVariable  (18)
	listaSentencias : .  (21)

	DIM  shift 3
	CTE_TRUE  reduce 21
	CTE_FALSE  reduce 21
	CTE_ENTERA  reduce 21
	CTE_REAL  reduce 21
	CTE_CHAR  reduce 21
	IDENT  reduce 21
	PRINT  reduce 21
	IF  reduce 21
	WHILE  reduce 21
	RETURN  reduce 21
	END  reduce 21
	READ  reduce 21
	NOT  reduce 21
	CTYPE  reduce 21
	'('  reduce 21

	declaracionVariable  goto 60
	listaSentencias  goto 84


state 65
	parametroFuncion : parametroFuncion ',' IDENT AS tipo .  (39)

	.  reduce 39


state 66
	expresion : CTE_TRUE .  (62)

	.  reduce 62


state 67
	expresion : CTE_FALSE .  (63)

	.  reduce 63


state 68
	expresion : CTE_ENTERA .  (40)

	.  reduce 40


state 69
	expresion : CTE_REAL .  (42)

	.  reduce 42


state 70
	expresion : CTE_CHAR .  (41)

	.  reduce 41


state 71
	sentencia : IDENT . '(' parametrosLlamada ')' ';'  (29)
	expresion : IDENT . '(' parametrosLlamada ')'  (58)
	expresion : IDENT .  (60)

	'('  shift 85
	MAYORIGUAL  reduce 60
	MENORIGUAL  reduce 60
	IGUAL  reduce 60
	AND  reduce 60
	OR  reduce 60
	DISTINTO  reduce 60
	'='  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	'*'  reduce 60
	'/'  reduce 60
	'['  reduce 60
	'.'  reduce 60


state 72
	sentencia : PRINT . expresion ';'  (23)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 87


state 73
	sentencia : IF . expresion THEN listaSentencias ELSE listaSentencias END IF ';'  (25)
	sentencia : IF . expresion THEN listaSentencias END IF ';'  (26)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 88


state 74
	sentencia : WHILE . expresion DO listaSentencias END WHILE ';'  (24)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 89


state 75
	sentencia : RETURN . expresion ';'  (27)
	sentencia : RETURN . ';'  (28)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	';'  shift 90
	.  error

	expresion  goto 91


state 76
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END . PROC ';'  (10)

	PROC  shift 92
	.  error


state 77
	sentencia : READ . expresion ';'  (30)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 93


state 78
	expresion : NOT . expresion  (61)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 94


state 79
	expresion : CTYPE . '(' tipo ',' expresion ')'  (59)

	'('  shift 95
	.  error


state 80
	expresion : '(' . expresion ')'  (57)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 96


state 81
	listaSentencias : listaSentencias sentencia .  (22)

	.  reduce 22


state 82
	sentencia : expresion . '=' expresion ';'  (31)
	expresion : expresion . '+' expresion  (43)
	expresion : expresion . '-' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '>' expresion  (47)
	expresion : expresion . '<' expresion  (48)
	expresion : expresion . MAYORIGUAL expresion  (49)
	expresion : expresion . MENORIGUAL expresion  (50)
	expresion : expresion . AND expresion  (51)
	expresion : expresion . OR expresion  (52)
	expresion : expresion . DISTINTO expresion  (53)
	expresion : expresion . IGUAL expresion  (54)
	expresion : expresion . listaDimensionesAcceso  (55)
	expresion : expresion . '.' IDENT  (56)

	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	IGUAL  shift 99
	AND  shift 100
	OR  shift 101
	DISTINTO  shift 102
	'='  shift 103
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'['  shift 110
	'.'  shift 111
	.  error

	listaDimensionesAcceso  goto 112


state 83
	declaracionCampo : IDENT listaDimensiones AS tipo ';' .  (14)

	.  reduce 14


state 84
	declaracionFuncion : FUNCTION IDENT '(' parametrosFuncion ')' AS tipo listaDeclaracionesVariable listaSentencias . END FUNCTION ';'  (8)
	listaSentencias : listaSentencias . sentencia  (22)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 71
	PRINT  shift 72
	IF  shift 73
	WHILE  shift 74
	RETURN  shift 75
	END  shift 113
	READ  shift 77
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	sentencia  goto 81
	expresion  goto 82


state 85
	sentencia : IDENT '(' . parametrosLlamada ')' ';'  (29)
	expresion : IDENT '(' . parametrosLlamada ')'  (58)
	parametrosLlamada : .  (32)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	')'  reduce 32

	expresion  goto 114
	parametrosLlamada  goto 115
	parametroLlamada  goto 116


state 86
	expresion : IDENT . '(' parametrosLlamada ')'  (58)
	expresion : IDENT .  (60)

	'('  shift 117
	MAYORIGUAL  reduce 60
	MENORIGUAL  reduce 60
	IGUAL  reduce 60
	DO  reduce 60
	THEN  reduce 60
	AND  reduce 60
	OR  reduce 60
	DISTINTO  reduce 60
	'='  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	'*'  reduce 60
	'/'  reduce 60
	'['  reduce 60
	']'  reduce 60
	')'  reduce 60
	'.'  reduce 60
	';'  reduce 60
	','  reduce 60


state 87
	sentencia : PRINT expresion . ';'  (23)
	expresion : expresion . '+' expresion  (43)
	expresion : expresion . '-' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '>' expresion  (47)
	expresion : expresion . '<' expresion  (48)
	expresion : expresion . MAYORIGUAL expresion  (49)
	expresion : expresion . MENORIGUAL expresion  (50)
	expresion : expresion . AND expresion  (51)
	expresion : expresion . OR expresion  (52)
	expresion : expresion . DISTINTO expresion  (53)
	expresion : expresion . IGUAL expresion  (54)
	expresion : expresion . listaDimensionesAcceso  (55)
	expresion : expresion . '.' IDENT  (56)

	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	IGUAL  shift 99
	AND  shift 100
	OR  shift 101
	DISTINTO  shift 102
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'['  shift 110
	'.'  shift 111
	';'  shift 118
	.  error

	listaDimensionesAcceso  goto 112


state 88
	sentencia : IF expresion . THEN listaSentencias ELSE listaSentencias END IF ';'  (25)
	sentencia : IF expresion . THEN listaSentencias END IF ';'  (26)
	expresion : expresion . '+' expresion  (43)
	expresion : expresion . '-' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '>' expresion  (47)
	expresion : expresion . '<' expresion  (48)
	expresion : expresion . MAYORIGUAL expresion  (49)
	expresion : expresion . MENORIGUAL expresion  (50)
	expresion : expresion . AND expresion  (51)
	expresion : expresion . OR expresion  (52)
	expresion : expresion . DISTINTO expresion  (53)
	expresion : expresion . IGUAL expresion  (54)
	expresion : expresion . listaDimensionesAcceso  (55)
	expresion : expresion . '.' IDENT  (56)

	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	IGUAL  shift 99
	THEN  shift 119
	AND  shift 100
	OR  shift 101
	DISTINTO  shift 102
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'['  shift 110
	'.'  shift 111
	.  error

	listaDimensionesAcceso  goto 112


state 89
	sentencia : WHILE expresion . DO listaSentencias END WHILE ';'  (24)
	expresion : expresion . '+' expresion  (43)
	expresion : expresion . '-' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '>' expresion  (47)
	expresion : expresion . '<' expresion  (48)
	expresion : expresion . MAYORIGUAL expresion  (49)
	expresion : expresion . MENORIGUAL expresion  (50)
	expresion : expresion . AND expresion  (51)
	expresion : expresion . OR expresion  (52)
	expresion : expresion . DISTINTO expresion  (53)
	expresion : expresion . IGUAL expresion  (54)
	expresion : expresion . listaDimensionesAcceso  (55)
	expresion : expresion . '.' IDENT  (56)

	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	IGUAL  shift 99
	DO  shift 120
	AND  shift 100
	OR  shift 101
	DISTINTO  shift 102
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'['  shift 110
	'.'  shift 111
	.  error

	listaDimensionesAcceso  goto 112


state 90
	sentencia : RETURN ';' .  (28)

	.  reduce 28


state 91
	sentencia : RETURN expresion . ';'  (27)
	expresion : expresion . '+' expresion  (43)
	expresion : expresion . '-' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '>' expresion  (47)
	expresion : expresion . '<' expresion  (48)
	expresion : expresion . MAYORIGUAL expresion  (49)
	expresion : expresion . MENORIGUAL expresion  (50)
	expresion : expresion . AND expresion  (51)
	expresion : expresion . OR expresion  (52)
	expresion : expresion . DISTINTO expresion  (53)
	expresion : expresion . IGUAL expresion  (54)
	expresion : expresion . listaDimensionesAcceso  (55)
	expresion : expresion . '.' IDENT  (56)

	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	IGUAL  shift 99
	AND  shift 100
	OR  shift 101
	DISTINTO  shift 102
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'['  shift 110
	'.'  shift 111
	';'  shift 121
	.  error

	listaDimensionesAcceso  goto 112


state 92
	declaracionProcedimiento : PROC IDENT '(' parametrosFuncion ')' listaDeclaracionesVariable listaSentencias END PROC . ';'  (10)

	';'  shift 122
	.  error


state 93
	sentencia : READ expresion . ';'  (30)
	expresion : expresion . '+' expresion  (43)
	expresion : expresion . '-' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '>' expresion  (47)
	expresion : expresion . '<' expresion  (48)
	expresion : expresion . MAYORIGUAL expresion  (49)
	expresion : expresion . MENORIGUAL expresion  (50)
	expresion : expresion . AND expresion  (51)
	expresion : expresion . OR expresion  (52)
	expresion : expresion . DISTINTO expresion  (53)
	expresion : expresion . IGUAL expresion  (54)
	expresion : expresion . listaDimensionesAcceso  (55)
	expresion : expresion . '.' IDENT  (56)

	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	IGUAL  shift 99
	AND  shift 100
	OR  shift 101
	DISTINTO  shift 102
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'['  shift 110
	'.'  shift 111
	';'  shift 123
	.  error

	listaDimensionesAcceso  goto 112


state 94
	expresion : expresion . '+' expresion  (43)
	expresion : expresion . '-' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '>' expresion  (47)
	expresion : expresion . '<' expresion  (48)
	expresion : expresion . MAYORIGUAL expresion  (49)
	expresion : expresion . MENORIGUAL expresion  (50)
	expresion : expresion . AND expresion  (51)
	expresion : expresion . OR expresion  (52)
	expresion : expresion . DISTINTO expresion  (53)
	expresion : expresion . IGUAL expresion  (54)
	expresion : expresion . listaDimensionesAcceso  (55)
	expresion : expresion . '.' IDENT  (56)
	expresion : NOT expresion .  (61)

	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	IGUAL  shift 99
	DISTINTO  shift 102
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'['  shift 110
	'.'  shift 111
	DO  reduce 61
	THEN  reduce 61
	AND  reduce 61
	OR  reduce 61
	'='  reduce 61
	']'  reduce 61
	')'  reduce 61
	';'  reduce 61
	','  reduce 61

	listaDimensionesAcceso  goto 112


state 95
	expresion : CTYPE '(' . tipo ',' expresion ')'  (59)

	BOOL  shift 22
	INTEGER  shift 23
	REAL  shift 24
	CHARACTER  shift 25
	IDENT  shift 26
	.  error

	tipo  goto 124


state 96
	expresion : expresion . '+' expresion  (43)
	expresion : expresion . '-' expresion  (44)
	expresion : expresion . '*' expresion  (45)
	expresion : expresion . '/' expresion  (46)
	expresion : expresion . '>' expresion  (47)
	expresion : expresion . '<' expresion  (48)
	expresion : expresion . MAYORIGUAL expresion  (49)
	expresion : expresion . MENORIGUAL expresion  (50)
	expresion : expresion . AND expresion  (51)
	expresion : expresion . OR expresion  (52)
	expresion : expresion . DISTINTO expresion  (53)
	expresion : expresion . IGUAL expresion  (54)
	expresion : expresion . listaDimensionesAcceso  (55)
	expresion : expresion . '.' IDENT  (56)
	expresion : '(' expresion . ')'  (57)

	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	IGUAL  shift 99
	AND  shift 100
	OR  shift 101
	DISTINTO  shift 102
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'['  shift 110
	')'  shift 125
	'.'  shift 111
	.  error

	listaDimensionesAcceso  goto 112


state 97
	expresion : expresion MAYORIGUAL . expresion  (49)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 126


state 98
	expresion : expresion MENORIGUAL . expresion  (50)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 127


state 99
	expresion : expresion IGUAL . expresion  (54)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 128


state 100
	expresion : expresion AND . expresion  (51)

	CTE_TRUE  shift 66
	CTE_FALSE  shift 67
	CTE_ENTERA  shift 68
	CTE_REAL  shift 69
	CTE_CHAR  shift 70
	IDENT  shift 86
	NOT  shift 78
	CTYPE  shift 79
	'('  shift 80
	.  error

	expresion  goto 129


state 101
	expresion : expresion OR . expresion  (52)
